--- a/src/css/style.css
+++ b/src/css/style.css
@@ -760,6 +760,15 @@ input:checked+.slider:before {
   }
 }
 
+.footer-text {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 0.8em;
+  font-style: italic;
+  color: var(--text-color);
+}
+
 /* Utility Classes */
 .hidden {
   display: none !important;
