--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ body {
 
 .actions-container {
   display: flex;
-  gap: 0.2rem;
+  gap: 1rem;
   margin-left: auto; /* Empurra as ações para a direita */
 }
 
@@ -183,6 +183,7 @@ body {
   gap: 1rem;
   padding: 1rem 0;
   justify-content: center; /* Centraliza os itens no grid */
+  z-index: 100 !important; /* Garante que o grid fique acima de outros elementos */
 }
 
 .clipboard-item {
@@ -735,6 +736,9 @@ input:checked+.slider:before {
   .header-container {
     gap: 0.2rem;
   }
+  .actions-container{
+    gap: 0.2rem;
+  }
   .button {
     padding: 0.66rem 0.5rem 0.5rem 0.5rem; /* Ajusta o padding para telas menores */
     font-size: 0.8rem; /* Reduz o tamanho da fonte */
@@ -761,12 +765,12 @@ input:checked+.slider:before {
 }
 
 .footer-text {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+  text-align: center;
+  padding: 2rem 1rem 1rem 1rem;
   font-size: 0.8em;
   font-style: italic;
-  color: var(--text-color);
+  color: var(--archived-text);
+  margin-top: 2rem;
 }
 
 /* Utility Classes */
